--- a/MarioPhysicsTest/MarioPhysicsTest.csproj
+++ b/MarioPhysicsTest/MarioPhysicsTest.csproj
@@ -86,6 +86,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Camera2d.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="Level.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
